[workspace]
members = ["packages/swc-plugin-workflow", "workbench/swc-playground/wasm"]

resolver = "2"

[workspace.package]
version      = "0.1.0"
edition      = "2024"
publish      = false
authors      = ["Pranay Prakash <pranay@vercel.com>"]
license      = "Apache-2.0"
rust-version = "1.87"

[workspace.dependencies]
serde           = "1"
serde_json      = "1"
swc_core        = "49.0"
swc_ecma_parser = "28.0"
testing         = "19.0"


[profile.release]
codegen-units = 1
# debug = true
lto = true

# Optimize for size
opt-level = "s"

# Strip debug symbols
strip = "symbols"