[package]
name         = "swc_playground_wasm"
version      = "0.1.0"
authors      = { workspace = true }
edition      = { workspace = true }
license      = { workspace = true }
publish      = false
rust-version = { workspace = true }

[lib]
crate-type = ["cdylib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
serde           = { workspace = true, features = ["derive"] }
serde_json      = { workspace = true }
swc_common      = "18.0"
swc_ecma_ast    = "19.0"
swc_ecma_codegen = "21.0"
swc_ecma_parser = { version = "28.0", default-features = false, features = ["typescript"] }
swc_ecma_visit  = "19.0"
swc_workflow    = { path = "../../../packages/swc-plugin-workflow/transform" }
wasm-bindgen    = "0.2"
